@@ -2,8 +2,6 @@ package ziyue.tjmetro.render;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.Tesselator;
-import com.mojang.blaze3d.vertex.VertexConsumer;
-import com.mojang.math.Vector3f;
 import mtr.MTR;
 import mtr.block.BlockRailwaySign;
 import mtr.block.BlockStationNameBase;
@@ -16,9 +14,10 @@ import mtr.data.Platform;
 import mtr.data.RailwayData;
 import mtr.data.Station;
 import mtr.mappings.BlockEntityRendererMapper;
-import mtr.render.MoreRenderLayers;
+import mtr.mappings.UtilitiesClient;
 import mtr.render.RenderRailwaySign;
 import mtr.render.RenderTrains;
+import mtr.render.StoredMatrixTransformations;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.renderer.MultiBufferSource;
@@ -28,13 +27,14 @@ import net.minecraft.core.Direction;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.block.state.BlockState;
-import ziyue.tjmetro.IDrawingExtends;
 import ziyue.tjmetro.block.BlockRailwaySignTianjin;
-import ziyue.tjmetro.block.base.BlockRailwaySignBase;
 import ziyue.tjmetro.client.ClientCache;
 
 import java.util.*;
 import java.util.stream.Collectors;
+
+import static mtr.render.RenderRailwaySign.getMaxWidth;
+import static mtr.render.RenderRailwaySign.getSign;
 
 /**
  * @author ZiYueCommentary
@@ -44,28 +44,26 @@ import java.util.stream.Collectors;
 
 public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEntityRailwaySignTianjin> extends BlockEntityRendererMapper<T> implements IBlock, IGui, IDrawing
 {
-    public static final int HEIGHT_TO_SCALE = 27;
-
     public RenderRailwaySignTianjin(BlockEntityRenderDispatcher dispatcher) {
         super(dispatcher);
     }
 
-    @Override
     public void render(T entity, float tickDelta, PoseStack matrices, MultiBufferSource vertexConsumers, int light, int overlay) {
         final BlockGetter world = entity.getLevel();
         if (world == null) return;
 
         final BlockPos pos = entity.getBlockPos();
         final BlockState state = world.getBlockState(pos);
-        if (!(state.getBlock() instanceof final BlockRailwaySignBase block)) return;
+        if (!(state.getBlock() instanceof BlockRailwaySignTianjin block)) return;
         if (entity.getSignIds().length != block.length) return;
+
         final Direction facing = IBlock.getStatePropertySafe(state, BlockStationNameBase.FACING);
         final String[] signIds = entity.getSignIds();
 
         int backgroundColor = 0x0B0B0B;
         for (final String signId : signIds) {
             if (signId != null) {
-                final CustomResources.CustomSign sign = RenderRailwaySign.getSign(signId);
+                final CustomResources.CustomSign sign = getSign(signId);
                 if (sign != null) {
                     if (sign.backgroundColor != 0) {
                         backgroundColor = sign.backgroundColor;
@@ -75,20 +73,33 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
             }
         }
 
+        final StoredMatrixTransformations storedMatrixTransformations = new StoredMatrixTransformations();
+        storedMatrixTransformations.add(matricesNew -> {
+            matricesNew.translate(0.5 + entity.getBlockPos().getX(), 0.53125 + entity.getBlockPos().getY(), 0.5 + entity.getBlockPos().getZ());
+            UtilitiesClient.rotateYDegrees(matricesNew, -facing.toYRot());
+            UtilitiesClient.rotateZDegrees(matricesNew, 180);
+            matricesNew.translate(block.getXStart() / 16F - 0.5, 0, -0.0625 - SMALL_OFFSET * 2);
+        });
+
         matrices.pushPose();
         matrices.translate(0.5, 0.53125, 0.5);
-        matrices.mulPose(Vector3f.YP.rotationDegrees(-facing.toYRot()));
-        matrices.mulPose(Vector3f.ZP.rotationDegrees(180));
-        matrices.translate(block.getXStart() / 16F - 0.5, 0, -0.0625 - SMALL_OFFSET * 3);
+        UtilitiesClient.rotateYDegrees(matrices, -facing.toYRot());
+        UtilitiesClient.rotateZDegrees(matrices, 180);
+        matrices.translate(block.getXStart() / 16F - 0.5, 10, -0.0625 - SMALL_OFFSET * 2);
 
-        final VertexConsumer vertexConsumer = vertexConsumers.getBuffer(MoreRenderLayers.getLight(new ResourceLocation(MTR.MOD_ID, "textures/block/white.png"), false));
-        IDrawing.drawTexture(matrices, vertexConsumer, 0, 0, SMALL_OFFSET * 2, 0.5F * (signIds.length), 0.5F, SMALL_OFFSET * 2, facing, backgroundColor | ARGB_BLACK, MAX_LIGHT_GLOWING);
+        final int newBackgroundColor = backgroundColor | ARGB_BLACK;
+        RenderTrains.scheduleRender(new ResourceLocation(MTR.MOD_ID, "textures/block/white.png"), false, RenderTrains.QueuedRenderLayer.LIGHT, (matricesNew, vertexConsumer) -> {
+            storedMatrixTransformations.transform(matricesNew);
+            IDrawing.drawTexture(matricesNew, vertexConsumer, 0, 0, SMALL_OFFSET, 0.5F * (signIds.length), 0.5F, SMALL_OFFSET, facing, newBackgroundColor, MAX_LIGHT_GLOWING);
+            matricesNew.popPose();
+        });
         for (int i = 0; i < signIds.length; i++) {
             if (signIds[i] != null) {
-                drawSign(matrices, vertexConsumers, Minecraft.getInstance().font, pos, signIds[i], 0.5F * i, 0, 0.5F, RenderRailwaySign.getMaxWidth(signIds, i, false), RenderRailwaySign.getMaxWidth(signIds, i, true), entity.getSelectedIds(), facing, backgroundColor | ARGB_BLACK, (textureId, x, y, size, flipTexture) -> {
-                    final VertexConsumer vertexConsumer1 = vertexConsumers.getBuffer(MoreRenderLayers.getLight(new ResourceLocation(textureId.toString()), true));
-                    IDrawing.drawTexture(matrices, vertexConsumer1, x, y, size, size, flipTexture ? 1 : 0, 0, flipTexture ? 0 : 1, 1, facing, -1, MAX_LIGHT_GLOWING);
-                });
+                drawSign(matrices, vertexConsumers, storedMatrixTransformations, Minecraft.getInstance().font, pos, signIds[i], 0.5F * i, 0, 0.5F, getMaxWidth(signIds, i, false), getMaxWidth(signIds, i, true), entity.getSelectedIds(), facing, backgroundColor | ARGB_BLACK, (textureId, x, y, size, flipTexture) -> RenderTrains.scheduleRender(new ResourceLocation(textureId.toString()), true, RenderTrains.QueuedRenderLayer.LIGHT_TRANSLUCENT, (matricesNew, vertexConsumer) -> {
+                    storedMatrixTransformations.transform(matricesNew);
+                    IDrawing.drawTexture(matricesNew, vertexConsumer, x, y, size, size, flipTexture ? 1 : 0, 0, flipTexture ? 0 : 1, 1, facing, -1, MAX_LIGHT_GLOWING);
+                    matricesNew.popPose();
+                }));
             }
         }
 
@@ -100,13 +111,13 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
         return true;
     }
 
-    public static void drawSign(PoseStack matrices, MultiBufferSource vertexConsumers, Font textRenderer, BlockPos pos, String signId, float x, float y, float size, float maxWidthLeft, float maxWidthRight, Set<Long> selectedIds, Direction facing, int backgroundColor, RenderRailwaySign.DrawTexture drawTexture) {
+    public static void drawSign(PoseStack matrices, MultiBufferSource vertexConsumers, StoredMatrixTransformations storedMatrixTransformations, Font textRenderer, BlockPos pos, String signId, float x, float y, float size, float maxWidthLeft, float maxWidthRight, Set<Long> selectedIds, Direction facing, int backgroundColor, RenderRailwaySign.DrawTexture drawTexture) {
         if (RenderTrains.shouldNotRender(pos, RenderTrains.maxTrainRenderDistance, facing)) return;
 
-        final CustomResources.CustomSign sign = RenderRailwaySign.getSign(signId);
+        final CustomResources.CustomSign sign = getSign(signId);
         if (sign == null) return;
 
-        final float signSize = (sign.small ? BlockRailwaySignBase.SMALL_SIGN_PERCENTAGE : 1) * size;
+        final float signSize = (sign.small ? BlockRailwaySign.SMALL_SIGN_PERCENTAGE : 1) * size;
         final float margin = (size - signSize) / 2;
 
         final boolean hasCustomText = sign.hasCustomText();
@@ -115,6 +126,7 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
         final boolean isExit = signId.equals(BlockRailwaySign.SignType.EXIT_LETTER.toString()) || signId.equals(BlockRailwaySign.SignType.EXIT_LETTER_FLIPPED.toString());
         final boolean isLine = signId.equals(BlockRailwaySign.SignType.LINE.toString()) || signId.equals(BlockRailwaySign.SignType.LINE_FLIPPED.toString());
         final boolean isPlatform = signId.equals(BlockRailwaySign.SignType.PLATFORM.toString()) || signId.equals(BlockRailwaySign.SignType.PLATFORM_FLIPPED.toString());
+        final boolean isStation = signId.equals(BlockRailwaySign.SignType.STATION.toString()) || signId.equals(BlockRailwaySign.SignType.STATION_FLIPPED.toString());
 
         final MultiBufferSource.BufferSource immediate = RenderTrains.shouldNotRender(pos, RenderTrains.maxTrainRenderDistance / 2, null) ? null : MultiBufferSource.immediate(Tesselator.getInstance().getBuilder());
 
@@ -131,25 +143,20 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
             final float exitWidth = signSize * selectedExitsSorted.size();
             matrices.scale(Math.min(1, maxWidth / exitWidth), 1, 1);
 
-            final VertexConsumer vertexConsumer = vertexConsumers.getBuffer(MoreRenderLayers.getLight(new ResourceLocation(MTR.MOD_ID, "textures/block/sign/exit_letter_blank.png"), true));
-
             for (int i = 0; i < selectedExitsSorted.size(); i++) {
                 final String selectedExit = selectedExitsSorted.get(flipCustomText ? selectedExitsSorted.size() - i - 1 : i);
                 final float offset = (flipCustomText ? -1 : 1) * signSize * i - (flipCustomText ? signSize : 0);
 
-                IDrawing.drawTexture(matrices, vertexConsumer, offset, 0, SMALL_OFFSET, offset + signSize, signSize, SMALL_OFFSET, facing, -1, MAX_LIGHT_GLOWING);
-
-                final String selectedExitLetter = selectedExit.substring(0, 1);
-                final String selectedExitNumber = selectedExit.substring(1);
-                final boolean hasNumber = !selectedExitNumber.isEmpty();
-                final float space = hasNumber ? margin * 1.5F : 0;
-                IDrawingExtends.drawStringWithFont(matrices, textRenderer, immediate, selectedExitLetter, hasNumber ? HorizontalAlignment.LEFT : HorizontalAlignment.CENTER, VerticalAlignment.CENTER, offset + (hasNumber ? margin : signSize / 2), signSize / 2 + margin, signSize - margin * 2 - space, signSize - margin, 1, ARGB_WHITE, false, MAX_LIGHT_GLOWING, null);
-                if (hasNumber) {
-                    IDrawingExtends.drawStringWithFont(matrices, textRenderer, immediate, selectedExitNumber, HorizontalAlignment.RIGHT, VerticalAlignment.TOP, offset + signSize - margin, signSize / 2, space, signSize / 2 - margin / 4, 1, ARGB_WHITE, false, MAX_LIGHT_GLOWING, null);
-                }
+                RenderTrains.scheduleRender(ClientCache.DATA_CACHE.getExitSignLetter(selectedExit.substring(0, 1), selectedExit.substring(1), backgroundColor).resourceLocation, true, RenderTrains.QueuedRenderLayer.LIGHT_TRANSLUCENT, (matricesNew, vertexConsumer) -> {
+                    storedMatrixTransformations.transform(matricesNew);
+                    matricesNew.translate(x + margin + (flipCustomText ? signSize : 0), y + margin, 0);
+                    matricesNew.scale(Math.min(1, maxWidth / exitWidth), 1, 1);
+                    IDrawing.drawTexture(matricesNew, vertexConsumer, offset, 0, signSize, signSize, facing, MAX_LIGHT_GLOWING);
+                    matricesNew.popPose();
+                });
 
                 if (maxWidth > exitWidth && selectedExitsSorted.size() == 1 && !exits.get(selectedExit).isEmpty()) {
-                    IDrawingExtends.drawStringWithFont(matrices, textRenderer, immediate, exits.get(selectedExit).get(0), flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, VerticalAlignment.CENTER, flipCustomText ? offset - margin : offset + signSize + margin, signSize / 2, maxWidth - exitWidth - margin * 2, signSize, HEIGHT_TO_SCALE / signSize, ARGB_WHITE, false, MAX_LIGHT_GLOWING, null);
+                    renderCustomText(exits.get(selectedExit).get(0), storedMatrixTransformations, facing, size, flipCustomText ? x : x + size, flipCustomText, maxWidth - exitWidth - margin * 2, backgroundColor);
                 }
             }
 
@@ -158,44 +165,44 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
             final Station station = RailwayData.getStation(ClientData.STATIONS, ClientData.DATA_CACHE, pos);
             if (station == null) return;
 
-            final Map<Integer, mtr.client.ClientCache.ColorNameTuple> routesInStation = ClientData.DATA_CACHE.stationIdToRoutes.get(station.id);
-            if (routesInStation != null) {
-                final List<mtr.client.ClientCache.ColorNameTuple> selectedIdsSorted = selectedIds.stream().filter(selectedId -> RailwayData.isBetween(selectedId, Integer.MIN_VALUE, Integer.MAX_VALUE)).map(Math::toIntExact).filter(routesInStation::containsKey).map(routesInStation::get).sorted(Comparator.comparingInt(route -> route.color)).collect(Collectors.toList());
+            final Map<Integer, mtr.client.ClientCache.ColorNameTuple> routesInStation = ClientData.DATA_CACHE.getAllRoutesIncludingConnectingStations(station);
+            final List<mtr.client.ClientCache.ColorNameTuple> selectedIdsSorted = selectedIds.stream().filter(selectedId -> RailwayData.isBetween(selectedId, Integer.MIN_VALUE, Integer.MAX_VALUE)).map(Math::toIntExact).filter(routesInStation::containsKey).map(routesInStation::get).sorted(Comparator.comparingInt(route -> route.color)).toList();
 
-                final float maxWidth = Math.max(0, ((flipCustomText ? maxWidthLeft : maxWidthRight) + 1) * size - margin * 2);
-                final float height = size - margin * 2;
-                final List<ClientCache.DynamicResource> resourceLocationDataList = new ArrayList<>();
-                float totalTextWidth = 0;
-                for (final mtr.client.ClientCache.ColorNameTuple route : selectedIdsSorted) {
-                    final ClientCache.DynamicResource resourceLocationData = ClientCache.DATA_CACHE.getRouteSquare(route.color, route.name, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT);
-                    resourceLocationDataList.add(resourceLocationData);
-                    totalTextWidth += height * resourceLocationData.width / resourceLocationData.height + margin / 2F;
-                }
+            final float maxWidth = Math.max(0, ((flipCustomText ? maxWidthLeft : maxWidthRight) + 1) * size - margin * 2);
+            final float height = size - margin * 2;
+            final List<mtr.client.ClientCache.DynamicResource> resourceLocationDataList = new ArrayList<>();
+            float totalTextWidth = 0;
+            for (final mtr.client.ClientCache.ColorNameTuple route : selectedIdsSorted) {
+                final mtr.client.ClientCache.DynamicResource resourceLocationData = ClientData.DATA_CACHE.getRouteSquare(route.color, route.name, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT);
+                resourceLocationDataList.add(resourceLocationData);
+                totalTextWidth += height * resourceLocationData.width / resourceLocationData.height + margin / 2F;
+            }
 
-                matrices.pushPose();
-                matrices.translate(flipCustomText ? x + size - margin : x + margin, 0, 0);
+            final StoredMatrixTransformations storedMatrixTransformations2 = storedMatrixTransformations.copy();
+            storedMatrixTransformations2.add(matricesNew -> matricesNew.translate(flipCustomText ? x + size - margin : x + margin, 0, 0));
 
-                if (totalTextWidth > margin / 2F) {
-                    totalTextWidth -= margin / 2F;
-                }
-                if (totalTextWidth > maxWidth) {
-                    matrices.scale(maxWidth / totalTextWidth, 1, 1);
-                }
+            if (totalTextWidth > margin / 2F) {
+                totalTextWidth -= margin / 2F;
+            }
+            if (totalTextWidth > maxWidth) {
+                final float finalTotalTextWidth = totalTextWidth;
+                storedMatrixTransformations2.add(matricesNew -> matricesNew.scale(maxWidth / finalTotalTextWidth, 1, 1));
+            }
 
-                float xOffset = 0;
-                for (final ClientCache.DynamicResource resourceLocationData : resourceLocationDataList) {
-                    final float width = height * resourceLocationData.width / resourceLocationData.height;
-                    IDrawing.drawTexture(matrices, vertexConsumers.getBuffer(MoreRenderLayers.getLight(resourceLocationData.resourceLocation, false)), flipCustomText ? -xOffset - width : xOffset, margin, width, height, Direction.UP, MAX_LIGHT_GLOWING);
-                    xOffset += width + margin / 2F;
-                }
-
-                matrices.popPose();
+            float xOffset = 0;
+            for (final mtr.client.ClientCache.DynamicResource resourceLocationData : resourceLocationDataList) {
+                final float width = height * resourceLocationData.width / resourceLocationData.height;
+                final float finalXOffset = xOffset;
+                RenderTrains.scheduleRender(resourceLocationData.resourceLocation, true, RenderTrains.QueuedRenderLayer.LIGHT, (matricesNew, vertexConsumer) -> {
+                    storedMatrixTransformations2.transform(matricesNew);
+                    IDrawing.drawTexture(matricesNew, vertexConsumer, flipCustomText ? -finalXOffset - width : finalXOffset, margin, width, height, Direction.UP, MAX_LIGHT_GLOWING);
+                    matricesNew.popPose();
+                });
+                xOffset += width + margin / 2F;
             }
         } else if (vertexConsumers != null && isPlatform) {
             final Station station = RailwayData.getStation(ClientData.STATIONS, ClientData.DATA_CACHE, pos);
-            if (station == null) {
-                return;
-            }
+            if (station == null) return;
 
             final Map<Long, Platform> platformPositions = ClientData.DATA_CACHE.requestStationIdToPlatforms(station.id);
             if (platformPositions != null) {
@@ -209,31 +216,45 @@ public class RenderRailwaySignTianjin<T extends BlockRailwaySignTianjin.TileEnti
                     final float bottomOffset = (i + 1) * height + extraMargin;
                     final float left = flipCustomText ? x - maxWidthLeft * size : x + margin;
                     final float right = flipCustomText ? x + size - margin : x + (maxWidthRight + 1) * size;
-                    final VertexConsumer vertexConsumer = vertexConsumers.getBuffer(MoreRenderLayers.getLight(ziyue.tjmetro.client.ClientCache.DATA_CACHE.getDirectionArrow(selectedIdsSorted.get(i), false, false, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, false, margin / size, (right - left) / (bottomOffset - topOffset), backgroundColor, ARGB_WHITE, backgroundColor).resourceLocation, true));
-                    IDrawing.drawTexture(matrices, vertexConsumer, left, topOffset, 0, right, bottomOffset, 0, 0, 0, 1, 1, facing, -1, MAX_LIGHT_GLOWING);
+                    RenderTrains.scheduleRender(ClientCache.DATA_CACHE.getDirectionArrow(selectedIdsSorted.get(i), false, false, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, false, margin / size, (right - left) / (bottomOffset - topOffset), backgroundColor, ARGB_WHITE, backgroundColor).resourceLocation, true, RenderTrains.QueuedRenderLayer.LIGHT_TRANSLUCENT, (matricesNew, vertexConsumer) -> {
+                        storedMatrixTransformations.transform(matricesNew);
+                        IDrawing.drawTexture(matricesNew, vertexConsumer, left, topOffset, 0, right, bottomOffset, 0, 0, 0, 1, 1, facing, -1, MAX_LIGHT_GLOWING);
+                        matricesNew.popPose();
+                    });
                 }
             }
         } else {
             drawTexture.drawTexture(sign.textureId, x + margin, y + margin, signSize, flipTexture);
 
             if (hasCustomText) {
-                final float fixedMargin = size * (1 - BlockRailwaySignBase.SMALL_SIGN_PERCENTAGE) / 2;
+                final float fixedMargin = size * (1 - BlockRailwaySign.SMALL_SIGN_PERCENTAGE) / 2;
                 final boolean isSmall = sign.small;
                 final float maxWidth = Math.max(0, (flipCustomText ? maxWidthLeft : maxWidthRight) * size - fixedMargin * (isSmall ? 1 : 2));
                 final float start = flipCustomText ? x - (isSmall ? 0 : fixedMargin) : x + size + (isSmall ? 0 : fixedMargin);
                 if (vertexConsumers == null) {
-                    IDrawingExtends.drawStringWithFont(matrices, textRenderer, immediate, isExit || isLine ? "..." : sign.customText, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, VerticalAlignment.TOP, start, y + fixedMargin, maxWidth, size - fixedMargin * 2, 0.01F, ARGB_WHITE, false, MAX_LIGHT_GLOWING, null);
+                    IDrawing.drawStringWithFont(matrices, textRenderer, immediate, isExit || isLine ? "..." : sign.customText, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, VerticalAlignment.TOP, start, y + fixedMargin, maxWidth, size - fixedMargin * 2, 0.01F, ARGB_WHITE, false, MAX_LIGHT_GLOWING, null);
                 } else {
-                    final ClientCache.DynamicResource dynamicResource = ziyue.tjmetro.client.ClientCache.DATA_CACHE.getSignText(sign.customText, flipCustomText ? HorizontalAlignment.RIGHT : HorizontalAlignment.LEFT, fixedMargin / size, backgroundColor, ARGB_WHITE);
-                    final VertexConsumer vertexConsumer = vertexConsumers.getBuffer(MoreRenderLayers.getLight(dynamicResource.resourceLocation, true));
-                    final float width = Math.min(size * dynamicResource.width / dynamicResource.height, maxWidth);
-                    IDrawing.drawTexture(matrices, vertexConsumer, start - (flipCustomText ? width : 0), 0, 0, start + (flipCustomText ? 0 : width), size, 0, 0, 0, 1, 1, facing, -1, MAX_LIGHT_GLOWING);
+                    final String signText;
+                    if (isStation) {
+                        signText = IGui.mergeStations(selectedIds.stream().filter(ClientData.DATA_CACHE.stationIdMap::containsKey).sorted(Long::compareTo).map(stationId -> IGui.insertTranslation("gui.mtr.station_cjk", "gui.mtr.station", 1, ClientData.DATA_CACHE.stationIdMap.get(stationId).name)).collect(Collectors.toList()));
+                    } else {
+                        signText = sign.customText;
+                    }
+                    renderCustomText(signText, storedMatrixTransformations, facing, size, start, flipCustomText, maxWidth, backgroundColor);
                 }
             }
         }
 
-        if (immediate != null) {
-            immediate.endBatch();
-        }
+        if (immediate != null) immediate.endBatch();
+    }
+
+    public static void renderCustomText(String signText, StoredMatrixTransformations storedMatrixTransformations, Direction facing, float size, float start, boolean flipCustomText, float maxWidth, int backgroundColor) {
+        final ClientCache.DynamicResource dynamicResource = ClientCache.DATA_CACHE.getSignText(signText, flipCustomText ? IGui.HorizontalAlignment.RIGHT : IGui.HorizontalAlignment.LEFT, (1 - BlockRailwaySign.SMALL_SIGN_PERCENTAGE) / 2, backgroundColor, ARGB_WHITE);
+        final float width = Math.min(size * dynamicResource.width / dynamicResource.height, maxWidth);
+        RenderTrains.scheduleRender(dynamicResource.resourceLocation, true, RenderTrains.QueuedRenderLayer.LIGHT_TRANSLUCENT, (matricesNew, vertexConsumer) -> {
+            storedMatrixTransformations.transform(matricesNew);
+            IDrawing.drawTexture(matricesNew, vertexConsumer, start - (flipCustomText ? width : 0), 0, 0, start + (flipCustomText ? 0 : width), size, 0, 0, 0, 1, 1, facing, -1, MAX_LIGHT_GLOWING);
+            matricesNew.popPose();
+        });
     }
 }
